--- a/help.html
+++ b/help.html
@@ -119,7 +119,6 @@
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
                         <div class="image-container">
-                            <img class="img-fluid" src="Resourse/helppage/images/header-iphone.png" alt="alternative">
 						</div> <!-- end of image-container -->
                     </div> <!-- end of col -->
 				</div> <!-- end of row -->
@@ -134,8 +133,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>FEATURES</h2>
-                    <div class="p-heading p-large">Leno was designed based on input from personal development coaches and popular trainers so it offers all</div>
+                    <h2>ESRENT</h2>
+                    <div class="p-heading p-large">Nous avons le plus d'annonces et de mises à jour constantes. Vous ne manquerez donc jamais rien..</div>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
